--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -55,10 +55,10 @@ import docs from "../stores/docs.json"
                 type="feature"
             />
         </div>
-        <h1>
+        <h1 class="text-center text-[25px] font-bold">
             Contributors
         </h1>
-        <div class="github-contributors" id="#contributors">
+        <div class="github-contributors flex flex-wrap max-w-[450px] pb-[30px] gap-[20px]" id="#contributors">
             <contributor-card>
                 <h2>Loading...</h2>
             </contributor-card>
