--- a/src/Layouts/Layout.astro
+++ b/src/Layouts/Layout.astro
@@ -10,7 +10,7 @@ import "../styles/index.css"
         <title>GreenFrog: Minecraft Software</title>
         <link rel="icon" href="/greenfrog.webp">
         <script is:inline>
-            document.addEventListener('astro:load', () => {
+            document.addEventListener('astro:page-load', () => {
             const Lazy = target => {
                 const io = new IntersectionObserver((entries, observer) => {
                     entries.forEach(async entry => {
