--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -16,7 +16,7 @@ import Navigation from "../components/Navigation.astro";
         <header>
             <div class="wrap">
                 <h1>404 | Oh no, you broke it</h1>
-                <img src="/thisisfine.webp" alt="This is fine image" />
+                <img src="/thisisfine.webp" alt="This is fine" />
             </div>
         </header>
     </body>
