--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -2,23 +2,15 @@
     <div class="wrap">
         <div class="images">
             <a href="/">
-                <img src="/greenfrog.webp" alt="Logo of greenfrogmcbe">
-                <p>
-                    GreenFrog
-                </p>
+                <img src="/greenfrog.webp" />
+                <p>GreenFrog</p>
             </a>
         </div>
+
         <div class="links">
-            <a href="/">
-                Home
-            </a>
-            <a href="/">
-                Respository
-            </a>
-            <a href="/docs/installation">
-                Docs
-            </a>
+            <a href="/">Home</a>
+            <a href="/">Respository</a>
+            <a href="/docs/installation">Docs</a>
         </div>
     </div>
 </nav>
-
