--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,38 +1,31 @@
 ---
 interface Props {
-    title: string
-    desc: string
-    type: "feature" | "document" 
-    href?: `${string}`
+    title: string;
+    desc: string;
+    type: "feature" | "document";
+    href?: `${string}`;
 }
 
-const {
-    title,
-    desc,
-    type,
-    href
-} = Astro.props
+const { title, desc, type, href } = Astro.props;
 ---
-{type === "feature" ?
-    <div class="p-[1em] bg-zinc-800 rounded-[15px] w-full flex flex-col items-center justify-center border-zinc-700 border-[2px] duration-[250ms] hover:bg-zinc-700 hover:border-zinc-600 cursor-default h-full">
-        <div class="w-full">
-            <h3 class="text-[20px] font-bold">
-                {title}
-            </h3>
-            <p>
-                {desc}
-            </p>
+
+{
+    type === "feature" ? (
+        <div class="p-[1em] bg-zinc-800 rounded-[15px] w-full flex flex-col items-center justify-center border-zinc-700 border-[2px] duration-[250ms] hover:bg-zinc-700 hover:border-zinc-600 cursor-default h-full">
+            <div class="w-full">
+                <h3 class="text-[20px] font-bold">{title}</h3>
+                <p>{desc}</p>
+            </div>
         </div>
-    </div>
-    :
-    <a href={`${href}`} class="p-[1em] bg-zinc-800 rounded-[15px] w-full flex flex-col items-center justify-center border-zinc-700 border-[2px] duration-[250ms] hover:bg-zinc-700 hover:border-zinc-600 h-full">
-        <div class="w-full">
-            <h3>
-                {title}
-            </h3>
-            <p>
-                {desc || "No description avalible for this document"}
-            </p>
-        </div>
-    </a>
+    ) : (
+        <a
+            href={`${href}`}
+            class="p-[1em] bg-zinc-800 rounded-[15px] w-full flex flex-col items-center justify-center border-zinc-700 border-[2px] duration-[250ms] hover:bg-zinc-700 hover:border-zinc-600 h-full"
+        >
+            <div class="w-full">
+                <h3><b>{title}</b></h3>
+                <p>{desc || "No description avalible"}</p>
+            </div>
+        </a>
+    )
 }
