--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from "../Layouts/Layout.astro";
+import Layout from "../layouts/Layout.astro";
 import Card from "../components/Card.astro";
 import Header from "../components/Header.astro"
 import Navigation from "../components/Navigation.astro"
@@ -9,6 +9,7 @@ import docs from "../stores/docs.json"
 <Layout>
 	<Navigation />
     <Header />
+
     <main>
         <h1 class="text-center text-[25px] font-bold">
             Documentation
