--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,7 +4,7 @@
     font-weight: 400;
     font-display: swap;
     src: url("/fonts/poppins-normal.woff2") format("woff2");
-    unicode-range: U+0900-097F,U+1CD0-1CF9,U+200C-200D,U+20A8,U+20B9,U+25CC,U+A830-A839,U+A8E0-A8FF
+    unicode-range: U+0900-097F, U+1CD0-1CF9, U+200C-200D, U+20A8, U+20B9, U+25CC, U+A830-A839, U+A8E0-A8FF
 }
 
 @font-face {
@@ -13,7 +13,7 @@
     font-weight: 400;
     font-display: swap;
     src: url("/fonts/poppins-normal-2.woff2") format("woff2");
-    unicode-range: U+0100-02AF,U+1E00-1EFF,U+2020,U+20A0-20AB,U+20AD-20CF,U+2113,U+2C60-2C7F,U+A720-A7FF;
+    unicode-range: U+0100-02AF, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 
 @font-face {
@@ -22,7 +22,7 @@
     font-weight: 400;
     font-display: swap;
     src: url("/fonts/poppinsnormal.woff2") format("woff2");
-    unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
 @font-face {
@@ -31,7 +31,7 @@
     font-weight: 800;
     font-display: swap;
     src: url("/fonts/poppins-bold.woff2") format("woff2");
-    unicode-range: U+0100-02AF,U+1E00-1EFF,U+2020,U+20A0-20AB,U+20AD-20CF,U+2113,U+2C60-2C7F,U+A720-A7FF
+    unicode-range: U+0100-02AF, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF
 }
 
 @font-face {
@@ -40,8 +40,9 @@
     font-weight: 800;
     font-display: swap;
     src: url("/fonts/poppins-bold2.woff2") format("woff2");
-    unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD
 }
+
 * {
     margin: auto;
     padding: auto;
@@ -57,6 +58,7 @@ body {
     min-height: 100vh;
     background-color: rgb(22, 23, 28);
 }
+
 html {
     scrollbar-gutter: stable;
 }
@@ -115,6 +117,7 @@ nav .images img:active {
 nav .links {
     margin-right: 0px;
 }
+
 nav .images a {
     display: flex;
     justify-content: center;
@@ -124,10 +127,12 @@ nav .images a {
     text-decoration: none;
     vertical-align: middle;
 }
+
 nav .images p {
     font-weight: 800;
     margin-left: 10px;
 }
+
 nav .links a {
     font-weight: 500;
     text-decoration: none;
@@ -169,7 +174,8 @@ aside {
     text-align: start;
 }
 
-aside a, aside button {
+aside a,
+aside button {
     cursor: pointer;
     font-size: 17px;
     padding: 8px;
@@ -198,7 +204,8 @@ aside button:hover svg {
     rotate: 90deg;
 }
 
-aside a:hover, aside button:hover {
+aside a:hover,
+aside button:hover {
     background-color: rgb(57, 57, 68);
 }
 
@@ -227,20 +234,26 @@ main p {
     margin-top: 20px;
     margin-bottom: 20px;
 }
+
 main.documentation h1 {
     font-size: 25px;
     font-weight: 800;
 }
-main.documentation p, li {
+
+main.documentation p,
+li {
     padding: 16px 0px 16px 0px;
 }
+
 main.documentation a {
     color: orange;
     text-decoration: underline;
 }
+
 main.documentation code {
     color: rgb(119, 119, 255);
 }
+
 main.documentation pre {
     border-radius: 15px;
     padding: 12px;
@@ -270,14 +283,17 @@ main.documentation pre {
         display: none;
     }
 }
+
 @media (max-width: 550px) {
     nav .images p {
         display: none;
     }
-    nav  a {
+
+    nav a {
         display: none;
     }
 }
+
 @keyframes fade-in {
     from {
         opacity: 0;
@@ -310,4 +326,4 @@ main.documentation pre {
 ::view-transition-new(root) {
     animation: 90ms cubic-bezier(0, 0, 0.2, 1) 90ms both fade-in,
         230ms cubic-bezier(0.4, 0, 0.2, 1) both slide-from-right;
-}   
+}
