--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,12 +1,65 @@
 ---
+import { Code } from "astro:components"
 ---
-<header class="flex flex-col items-center justify-center min-h-[100vh] relative">
-    <div class="w-full text-center p-[16px]">
-        <h1 class="text-[45px] font-bold mb-[25px] lg:text-[35px] sm:text-[30px]">
-            Make plugins with JavaScript
-        </h1>
-        <p class="w-full max-w-[500px] m-auto text-zinc-300 text-center">
-            Minecraft Server Software for creating high-performance JavaScript gameplay.
-        </p>	
-    </div>
+
+<header
+	class="flex flex-col items-center justify-center min-h-[100vh] relative h-full bg-gradient-to-b from-slate-800 to-blue-800"
+>
+	<img
+		src="/greenfrogbg.webp"
+		alt=""
+		class="absolute top-0 left-0 w-full h-full opacity-80 object-cover select-none aspect-square"
+	/>
+	<section
+		class="absolute top-[20px] w-full h-full flex gap-[40px] px-[20px] animate-fade-in-up max-w-[1200px]"
+	>
+		<div class="w-full max-w-[400px] h-full flex items-center justify-center">
+			<div class="w-full">
+				<h1 class="text-[40px] font-bold py-[10px]">Make JavaScript plugins</h1>
+				<p class="py-[16px]">
+					Open Source Minecraft Server software which allows JavaScript to be used at the
+					time of creating your server plugins.
+				</p>
+				<div class="font-semibold block h-full w-full bg-black/50 rounded-[12px]">
+					<a href="/docs/" class="text-center block w-full p-[16px]">Install GreenFrog</a>
+				</div>
+				<p class="py-[16px]">
+					Open Source Minecraft Server software which allows JavaScript to be used at the
+					time of creating your server plugins.
+				</p>
+			</div>
+		</div>
+		<div class="w-full max-w-[700px] h-full flex items-center justify-center">
+			<div class="w-full">
+				<Code
+					wrap
+					code=`
+import { EventType } from "../../src/events/EventType.mjs"
+import { EventEmitter } from "@kotinash/better-events"
+import { Logger } from "../../src/logger/Logger.mjs"
+				
+class Test {
+	load() {
+		Logger.info("load")
+				
+		EventEmitter.on(
+			EventType.ServerTick,
+			((server) => {
+				Logger.info("server ticked")
+			})
+		)
+	}
+				
+	shutdown() {
+		Logger.info("shutdown")
+	}
+}
+				
+export { Test }`
+					lang="typescript"
+					class="p-[16px] rounded-[7px] w-full max-h-[400px]"
+				/>
+			</div>
+		</div>
+	</section>
 </header>
