--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -140,19 +140,7 @@ nav .links a {
     margin-right: 20px;
 }
 
-header::before {
-    z-index: -1;
-    content: "";
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    width: 100%;
-    height: 100vh;
-    background: url("/greenfrogbg.webp");
-    background-size: cover;
-    background-position: center center;
-    opacity: 0.75;
-}
+
 
 .wrapper {
     width: 100%;
@@ -222,10 +210,11 @@ main {
     margin-left: 0px;
 }
 
+
 main h1,
 h2 {
-    margin-top: 40px;
-    margin-bottom: 40px;
+    margin-top: 20px;
+    margin-bottom: 20px;
     text-align: start;
 }
 
@@ -236,8 +225,14 @@ main p {
 }
 
 main.documentation h1 {
-    font-size: 25px;
+    border-bottom: 2px solid gray;
+    font-size: 35px;
     font-weight: 800;
+}
+
+main.documentation h2 {
+    font-size: 25px;
+    font-weight: 700;
 }
 
 main.documentation p,
@@ -246,8 +241,16 @@ li {
 }
 
 main.documentation a {
-    color: orange;
+    padding: 4px;
+    padding-inline: 8px;
+    border-radius: 12px;
+    color: rgb(190, 255, 92);
     text-decoration: underline;
+}
+
+main.documentation a:hover {
+    background-color: rgb(32, 81, 36);
+
 }
 
 main.documentation code {
